# arduino-sdk

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  extra_script.py  keywords.txt  library.json  library.properties  package.json
.devcontainer/: devcontainer.json
docs/: _e_s_p8266_true_random_8h_source.html  _io_te_x-blockchain-client_8h_source.html  _io_te_x_client_8h_source.html  _io_te_x_constants_8h_source.html  _io_te_x_result_codes_8h_source.html  abi_8h_source.html  abi_decode_8h_source.html  abstract_8h_source.html  account_8h_source.html  account_manager_8h_source.html  address_8h_source.html  annotated.html  api_8h_source.html  base_8h_source.html  bech32_8h_source.html  bignum_8h_source.html  classes.html  classiotex_1_1_abstract_h_t_t_p-members.html  classiotex_1_1_abstract_h_t_t_p.html  classiotex_1_1_account-members.html  classiotex_1_1_account.html  classiotex_1_1_account_manager-members.html  classiotex_1_1_account_manager.html  classiotex_1_1_address-members.html  classiotex_1_1_address.html  classiotex_1_1_api-members.html  classiotex_1_1_api.html  classiotex_1_1_connection-members.html  classiotex_1_1_connection.html  classiotex_1_1_contract-members.html  classiotex_1_1_contract.html  classiotex_1_1_encoder-members.html  classiotex_1_1_encoder.html  classiotex_1_1_helpers-members.html  classiotex_1_1_helpers.html  classiotex_1_1_host-members.html  classiotex_1_1_host.html  classiotex_1_1_i_h_t_t_p-members.html  classiotex_1_1_i_h_t_t_p.html  classiotex_1_1_parameter_values_dictionary-members.html  (+176 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  (+20 more)
examples/AccountManager/: AccountManager.ino  platformio.ini
examples/ContractAddData/: ContractAddData.ino  README.md  secrets.h
examples/CreateAccountFromPrivateKey/: CreateAccountFromPrivateKey.ino  README.md
examples/CreateNewAccount/: CreateNewAccount.ino  README.md  secrets.h
examples/GetAccountMetadata/: GetAccountMetadata.ino  README.md  platformio.ini  secrets.h
examples/GetExecutionByHash/: GetExecutionByHash.ino  README.md
examples/GetTransactionByHash/: GetTransactionByHash.ino  README.md
examples/HwWallet/: HwWallet.ino  README.md  platformio.ini  secrets.h
examples/IotexCommandLine/: IotexCommandLine.ino  README.md  addDataAbi.h  commands.h  extra_script.py  platformio.ini
examples/SendTransfer/: README.md  SendTransfer.ino
examples/SignMessage/: README.md  SignMessage.ino  platformio.ini  secrets.h
examples/StorePrivateKey/: README.md  StorePrivateKey.ino  platformio.ini
examples/Xrc20TokenReadBalance/: README.md  Xrc20TokenReadBalance.ino  platformio.ini
examples/Xrc20TokenSendTransfer/: README.md  Xrc20TokenSendTransfer.ino  secrets.h
examples/Xrc20TokenTransferMultiple/: README.md  Xrc20TokenTransferMultiple.ino
src/: IoTeX-blockchain-client.h  IoTeXClient.h  IoTeXConstants.h  IoTeXResultCodes.h
src/abi/: abi.cpp  abi.h  abiDecode.cpp  abiDecode.h
src/account/: account.cpp  account.h  accountManager.cpp  accountManager.h  address.cpp  address.h
src/api/: abstract.h  api.h  base.h  rpc.cpp  rpc.h
src/api/wallet/: wallets.cpp  wallets.h
src/bignum/: bignum.cpp  bignum.h
src/connection/: connection.h
src/contract/: contract.cpp  contract.h  xrc20Contract.cpp  xrc20Contract.h
src/encoder/: bech32.cpp  bech32.h  encoder.cpp  encoder.h
src/encoder/util/: vector.h
src/helpers/: client_helper.cpp  client_helper.h  json_helper.cpp  json_helper.h  reflection_helper.h
src/host/: host.cpp  host.h
src/http/: http.h
src/http/esp/: http.cpp
src/http/nano33/: http.cpp
src/http/os/: http.cpp
src/protobuf/: pb_api.cpp  pb_api.h
src/protobuf_files/: action.proto  blockchain.proto  timestamp.proto
src/protobuf_files/c_files/: action.pb.c  action.pb.h  blockchain.pb.c  blockchain.pb.h  timestamp.pb.c  timestamp.pb.h
src/random/: platformRand32.cpp  random.h
src/random/esp32/: random.cpp
src/random/esp8266/: ESP8266TrueRandom.cpp  ESP8266TrueRandom.h  random.cpp
src/random/nano33iot/: random.cpp
src/random/os/: random.cpp
src/signer/: signer.cpp  signer.h
src/storage/: storage.h
src/storage/esp/: storage.cpp
src/storage/nano33iot/: storage.cpp
src/storage/os/: storage.cpp
tests/: CMakeLists.txt
tests/files/: addData.json  contractAbi.json
tests/include/: constants.h
tests/src/abi/: abiTests.cpp
tests/src/abi/decode/: abiDecodeAddressTests.cpp  abiDecodeArrayTests.cpp  abiDecodeBoolTests.cpp  abiDecodeBytesTests.cpp  abiDecodeIntTests.cpp  abiDecodeStringTests.cpp  abiDecodeUintTests.cpp
tests/src/account/: accountManagerTests.cpp  accountTests_Execution.cpp  accountTests_Integration.cpp  addressTests.cpp
tests/src/api/wallets/: walletsTests.cpp
tests/src/contract/: contractTests.cpp  xrc20ContractTests.cpp
tests/src/signer/: signerTests.cpp
tools/: .clang-format  abiDecoder.js  build-platformio.sh  build.sh  build_arduino-cli.sh  build_protobuf.sh  build_upload_platformio_example.sh  clang_format.sh  protobuf_decode.sh
tools/server/: envoy-conf-mainnet.yaml  envoy-conf-testnet.yaml  envoy-conf.yaml  generate_proto.sh
tools/server-fake/: README.md  config.json  server_fake.py
